hphp/test/zend/bad/ext/soap/tests/interop/Round3/GroupD/r3_groupD_rpcenc_004w.php
<?php
$client = new SoapClient(dirname(__FILE__)."/round3_groupD_rpcenc.wsdl",array("trace"=>1,"exceptions"=>0));
$client->echoVoid();
echo $client->__getlastrequest();
$HTTP_RAW_POST_DATA = $client->__getlastrequest();
include("round3_groupD_rpcenc.inc");
echo "ok\n";
?>